--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!"><img src="image  New/Com_Small_Logo.png" style="width: 200px; height:70px;" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="add.html">Add Product</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Buy New</a></li>
+                        <li class="nav-item"><a class="nav-link" href="add.html">Phick Up</a></li>
                     </ul>
                     <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
-                            <i class="bi-cart-fill me-1"></i>
-                            Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                            <i class="cart me-1"></i>
+                            កម្មងរួចរាល់
+                            <span class="badge bg-dark text-white ms-1 rounded-pill" id="count">0</span>
                         </button>
                     </form>
                 </div>
             </div>
         </nav>
         <!-- Header-->
-        <header class="bg-dark py-5">
-            <div class="container px-4 px-lg-5 my-5">
-                <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+        <header class=" py-1">
+            <img src="image  New/brown-coffee-4.webp" style="width: 100%; height: 500px;" alt="">
+            <div class="container px-4 px-lg-5 my-1">
+                <div class=" col-12 text-center text-white">  
+                    
                 </div>
             </div>
         </header>
@@ -51,10 +51,41 @@
                     
                 </div>
             </div>
+            <!-- Modal -->
+            <div class="modal fade" id="modalUpdate" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">បញ្ជាក់ការទិញ</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    <form action="">
+                        <input type="hidden" name="" id="index">
+                        <label for=""ឈ្មោះ:</label>
+                        <input type="text" name="" id="name" class="form-control my-2">
+                        <label for="">ទឹកប្រាក់:</label>
+                        <input type="text" name="" id="min-price" class="form-control my-2">
+                        <!-- <label for="">Max Price:</label>
+                        <input type="text" name="" id="max-price" class="form-control my-2"> -->
+                        <label for="">មុខម្ហូប​​ និង​​​ ភេជ្ជះ:</label>
+                        <input type="file" name="" id="image" class="form-control my-2">
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">ថយក្រោយ</button>
+                            <button type="button" id="btn-save" class="btn btn-primary" data-bs-dismiss="modal">ទិញអីលូវនេះ</button>
+                        </div>
+                    </form>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+
+
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+            <div class="container"><p class="m-0 text-center text-white">Brown Coffe was&copy;founde in 2009 </p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
